[project]
name = "fauxfactory"
version = "3.1.2"
license = { text = "Apache-2.0" }
description = "Generates random data for your tests."
authors = [
    { name = "Og B. Maciel", email = "omaciel@ogmaciel.com" }
]
readme = "README.rst"
requires-python = ">= 3.9"

keywords = [
  "automation",
  "data",
  "python",
  "testing",
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "codecov>=2.1.13",
    "pytest-cov>=5.0.0",
    "wheel>=0.43.0",
    "twine>=5.0.0",
    "ruff>=0.3.4",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
Changelog = "https://github.com/omaciel/fauxfactory/blob/master/HISTORY.rst"
Homepage = "https://github.com/omaciel/fauxfactory"
Repository = "https://github.com/omaciel/fauxfactory"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["tests/", "docs/"]  # Exclude test and doc directories
include = ["fauxfactory/**/*", "README.rst", "LICENSE"]  # Ensure only necessary files are packaged
directory = "dist"

[tool.hatch.build.targets.sdist]
include = ["fauxfactory/**/*", "README.rst", "LICENSE"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fauxfactory"]
macos-max-compat = true

[tool.ruff]
include = ["*.py"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B018", "E203"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
