[project]
name = "fauxfactory"
version = "4.1.0"
license = { text = "Apache-2.0" }
description = "Generates random data for your tests."
authors = [
    { name = "Og B. Maciel", email = "omaciel@ogmaciel.com" }
]
readme = "README.rst"
requires-python = ">= 3.10"

keywords = [
  "automation",
  "data",
  "python",
  "testing",
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "codecov>=2.1.13",
    "pytest-cov>=5.0.0",
    "wheel>=0.43.0",
    "twine>=5.0.0",
    "ruff>=0.3.4",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
Changelog = "https://github.com/omaciel/fauxfactory/blob/master/CHANGELOG.md"
Homepage = "https://github.com/omaciel/fauxfactory"
Repository = "https://github.com/omaciel/fauxfactory"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["tests/", "docs/"]  # Exclude test and doc directories
include = ["fauxfactory/**/*", "README.rst", "LICENSE"]  # Ensure only necessary files are packaged
directory = "dist"

[tool.hatch.build.targets.sdist]
include = ["fauxfactory/**/*", "README.rst", "LICENSE"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fauxfactory"]
macos-max-compat = true

[tool.ruff]
include = ["*.py"]
exclude = ["docs/"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "ANN",  # flake8-annotations
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "S",    # flake8-bandit (security)
]
ignore = [
    "B018",    # Useless expression
    "E203",    # Whitespace before ':'
    "E501",    # Line too long (handled by formatter)
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function (tests)
    "ANN202",  # Missing return type annotation for private function
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "SIM102",  # Use single if statement instead of nested if
    "UP047",   # Generic functions with type parameters (false positives)
    "S101",    # Use of assert (acceptable in tests)
    "S104",    # Possible binding to all interfaces (false positive for netmask constants)
    "S311",    # Pseudo-random generators (intentional for test data generation library)
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true
